--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,9 +26,12 @@ jobs:
           pip install -r requirements.txt
           python modelling.py
 
-      - name: Capture metrics for release notes
+      - name: Capture metrics
         id: metrics
-        run: echo "json=$(cat models/training_metrics.txt)" >> $GITHUB_OUTPUT
+        run: |
+          echo 'json<<EOF' >> "$GITHUB_OUTPUT"
+          cat models/training_metrics.txt >> "$GITHUB_OUTPUT"
+          echo 'EOF' >> "$GITHUB_OUTPUT"
 
       - name: Login
         uses: docker/login-action@v3
