--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,6 +26,16 @@ jobs:
           pip install -r requirements.txt
           python modelling.py
 
+      - name: Capture metrics for release notes
+        id: metrics
+        shell: bash
+        run: |
+          {
+            echo "json<<EOF"
+            cat models/training_metrics.txt
+            echo "EOF"
+          } >> "$GITHUB_OUTPUT"
+
       - name: Login
         uses: docker/login-action@v3
         with:
@@ -69,3 +79,5 @@ jobs:
             ```
             ${{ steps.metrics.outputs.json }}
             ```
+
+            
