--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,11 +30,12 @@ jobs:
         id: metrics
         shell: bash
         run: |
-          {
-            echo "json<<EOF"
-            cat models/training_metrics.txt
-            echo "EOF"
-          } >> "$GITHUB_OUTPUT"
+          python - <<'PY' >> "$GITHUB_OUTPUT"
+          import json
+          with open("models/training_metrics.txt","r",encoding="utf-8") as f:
+              data = json.load(f)
+          print("json=" + json.dumps(data, separators=(",",":")))
+          PY
 
       - name: Login
         uses: docker/login-action@v3
